k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migrateiq
  labels:
    name: migrateiq
    app: migrateiq
